test_programs/compile_failure/noirc_frontend_monomorphization_tests_bounded_recursive_type_errors/src/main.nr

        fn main() {
            let _tree: Tree<Tree<Tree<()>>> = Tree::Branch(
                Tree::Branch(Tree::Leaf, Tree::Leaf),
                Tree::Branch(Tree::Leaf, Tree::Leaf),
            );
        }

        enum Tree<T> {
            Branch(T, T),
            Leaf,
        }
        